[package]
name = "chain_reaction"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
yew = { version = "0.20", features = ["csr"], optional = true }
gloo-timers = { version = "0.2.6", optional = true }
wasm-bindgen-futures = { version = "0.4.34", optional = true }

[features]
webui = ["dep:yew", "dep:gloo-timers", "dep:wasm-bindgen-futures"]

[[bin]]
name = "web"
required-features = ["webui"]
