[package]
name = "chain_reaction"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
yew = { version = "0.20", features = ["csr"], optional = true }
gloo-timers = { version = "0.2.6", optional = true }
wasm-bindgen-futures = { version = "0.4.34", optional = true }
yew-router = { version = "0.17", optional = true }
web-sys = { version = "0.3.61", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[features]
webui = ["yew", "gloo-timers", "wasm-bindgen-futures", "yew-router", "web-sys", "wee_alloc"]

[[bin]]
name = "web"
required-features = ["webui"]

[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase (slow)
opt-level = 'z' # optimization for size ( more aggressive )
lto = true # link time optimization using using whole-program analysis
